plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.jiujitsu'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

compileJava {
	options.compilerArgs += '-parameters'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation platform("org.springframework.cloud:spring-cloud-dependencies:2023.0.3")
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.1'

	// WebClient
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// Google OAuth
	implementation 'com.google.api-client:google-api-client:1.34.1'
	implementation 'com.google.oauth-client:google-oauth-client:1.34.1'
	implementation 'com.google.http-client:google-http-client-gson:1.41.5'

	// JWT
	implementation 'com.auth0:java-jwt:3.18.2'
	implementation 'com.auth0:jwks-rsa:0.21.1'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	// Firebase
	implementation 'com.google.firebase:firebase-admin:9.2.0'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	runtimeOnly 'org.postgresql:postgresql'
	runtimeOnly 'com.h2database:h2'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}